--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,15 @@
+body{
+    cursor: url("../assets/cursor/yugicursor.png"), default;
+}
+
+button, 
+a,
+img:hover,
+button:hover,
+a:hover{
+    cursor: url("../assets/cursor/yamiyugicursorGLOW.png"), auto;
+}
+
 .bg-video{
     position:absolute;
     z-index: -2;
@@ -38,6 +50,7 @@
 }
 
 .container__left{
+    display: flex;
     width: 35%;
     min-width: 300px;
     flex-direction: column;
@@ -53,7 +66,7 @@
 .frame{
     border: 3px solid #000;
     border-radius: 5px;
-    height: 77vh;/* isso deixa o fundo laranja em toda area lateral*/  
+   /* height: 77vh;/* isso deixa o fundo laranja em toda area lateral*/  
 }
 
 .card_details{
@@ -96,8 +109,11 @@
 .card-versus__container{
     display: flex;
     flex-direction: column;
-    padding-top: 1rem;
+    padding-top: 0.1rem;
     height: 300px;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
 }
 
 .versus-top, .vesus-bottom{
@@ -128,4 +144,12 @@
     height: 11.2rem;
     width: 8rem;
     border-radius: 8px;
+}
+
+.card{
+    transition: transform 0.2s;
+}
+
+.card:hover{
+    transform: scale(1.2);
 }
